# mcp-marketing-suite

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bash.exe.stackdump  docker-compose.yml  pyproject.toml
langflow/: marketing_flow.json
src/mcp_marketing_suite/: __init__.py  config.py  logging_config.py  mcp_server.py  models.py  observability.py
src/mcp_marketing_suite/api/: main.py  schemas.py
src/mcp_marketing_suite/crew/: __init__.py  agents.py  client.py  orchestrator.py
src/mcp_marketing_suite/prompts/: ads_v1.md  crm_v1.md  seo_v1.md  strategy_v1.md
src/mcp_marketing_suite/resources/: __init__.py  context_data.py
src/mcp_marketing_suite/tools/: __init__.py  base.py  generate_ads.py  generate_crm_sequences.py  generate_seo_plan.py  generate_strategy.py  schemas.py  score_copy_quality.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_tools.py
