[project]
name = "mcp-marketing-suite"
version = "0.1.0"
description = "Marketing Copilot with MCP server, CrewAI orchestration, Langflow visual flow, and FastAPI API"
authors = [{ name = "Marketing Copilot Team" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["marketing", "copilot", "mcp", "crewai", "fastapi", "langflow"]

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
crewai = "^0.28.0"
crewai-tools = "^0.2.0"
httpx = "^0.27.0"
python-json-logger = "^2.0.7"
tenacity = "^8.3.0"
rich = "^13.7.0"
structlog = "^24.1.0"
langflow = "^1.0.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.7"
typing-extensions = "^4.12.0"
anyio = "^4.4.0"

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "ruff>=0.5.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "ERA"]
ignore = ["E203", "E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
